--- a/res/layout/activity_search_results.xml
+++ b/res/layout/activity_search_results.xml
@@ -4,5 +4,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
+  <EditText
+     android:layout_width="fill_parent"
+     android:layout_height="wrap_content"
+     android:layout_alignParentLeft="true"
+     android:layout_alignParentRight="true"
+     />
 </RelativeLayout>
 
