--- a/res/layout/activity_search_results.xml
+++ b/res/layout/activity_search_results.xml
@@ -5,10 +5,20 @@
     android:layout_height="fill_parent"
     >
   <EditText
-     android:layout_width="fill_parent"
+     android:id="@+id/etSearchString"
+     android:layout_width="0dp"
      android:layout_height="wrap_content"
+     android:layout_alignParentTop="true"
      android:layout_alignParentLeft="true"
+     android:layout_toLeftOf="@+id/btnSearch"
+     />
+  <Button
+     android:id="@+id/btnSearch"
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:layout_alignParentTop="true"
      android:layout_alignParentRight="true"
+     android:text="@string/btn_search"
      />
 </RelativeLayout>
 
