--- a/res/layout/activity_search_results.xml
+++ b/res/layout/activity_search_results.xml
@@ -22,6 +22,7 @@
      android:layout_alignParentTop="true"
      android:layout_alignParentRight="true"
      android:text="@string/btn_search"
+     android:onClick="onImageSearch"
      />
   <GridView
      android:id="@+id/gvSearchResults"
