--- a/res/layout/item_image_result.xml
+++ b/res/layout/item_image_result.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
+<com.loopj.android.image.SmartImageView
    xmlns:android="http://schemas.android.com/apk/res/android"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent"
-   >
-
-</ImageView>
+   android:layout_width="75dp"
+   android:layout_height="75dp"
+   />
