Fix up columns in GridView
No column width was assigned.  Set it and make the grid automatically fill
the width of the device.

Time: 45:23

--- a/res/layout/activity_search_results.xml
+++ b/res/layout/activity_search_results.xml
@@ -31,6 +31,10 @@
      android:layout_below="@id/etSearchString"
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
+     android:columnWidth="75dp"
+     android:numColumns="auto_fit"
+     android:gravity="center"
+     android:stretchMode="columnWidth"
      />
 </RelativeLayout>
 
