Abstract out the Response Callback and add a getNextPage() method
Make numColumns = 3, otherwise the maximum allowed pages runs out.

--- a/res/layout/activity_search_results.xml
+++ b/res/layout/activity_search_results.xml
@@ -31,7 +31,7 @@
      android:layout_alignParentLeft="true"
      android:layout_alignParentRight="true"
      android:columnWidth="75dp"
-     android:numColumns="auto_fit"
+     android:numColumns="3"
      android:gravity="center"
      android:stretchMode="columnWidth"
      />
